--- a/applications/garden/design/activity.css
+++ b/applications/garden/design/activity.css
@@ -262,22 +262,24 @@ div.EmptyInfo {
 /* Note: The MessageModule (in /applications/garden/modules) wraps all messages
   that it renders in a div with this DismissMessage class. */
 div.DismissMessage {
-   margin: 0 0 10px;
+   margin: 6px 0 10px;
 }
 div.DismissMessage p {
-   margin: 0;
+   margin: 2px 0;
 }
-div.DismissMessage a.Close {
+div.DismissMessage a.Dismiss {
    float: right;
-   background: #fafafa;
    line-height: 120%;
-   border: 1px solid #eee;
-   color: #aaa;
+   color: #999;
+	padding: 2px 4px;
 }
-div.DismissMessage a.Close:hover {
+div.DismissMessage a.Dismiss:hover {
    background: #fafafa;
    border: 1px solid #ccc;
-   color: #777;
+   color: #333;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 1px 3px;
 }
 /* Note: The close class is used on the "close" anchor in popups. */
 a.Close {
