--- a/applications/garden/views/atom.master
+++ b/applications/garden/views/atom.master
@@ -1,6 +1,6 @@
 <?php echo '<?xml version="1.0" encoding="utf-8"?>'; ?>
 <feed xmlns="http://www.w3.org/2005/Atom">
-   <title><?php echo $this->Head->Title; ?></title>
+   <title><?php echo $this->Head->Title(); ?></title>
    <link href="<?php echo Url('', TRUE, TRUE); ?>"/>
    <updated><?php echo date(DATE_ATOM); ?></updated>
    
