--- a/applications/vanilla/design/vanilla.css
+++ b/applications/vanilla/design/vanilla.css
@@ -941,7 +941,7 @@ ul.Drafts li ul li.Title a.DeleteDraft {
    background: url('button_bg2.png') repeat-x center left #f8f8f8;
    border: 1px solid #bbb;
    -moz-border-radius: 2px;
-   -webkig-border-radius: 2px;
+   -webkit-border-radius: 2px;
    color: #555 /* Body Text Font Color */;
    cursor: pointer;
    line-height: 100%;
