--- a/plugins/VanillaCommentReplies/style.css
+++ b/plugins/VanillaCommentReplies/style.css
@@ -9,7 +9,7 @@ li.Reply a.DeleteReply {
    background: url('button_bg2.png') repeat-x center left #f8f8f8;
    border: 1px solid #bbb;
    -moz-border-radius: 2px;
-   -webkig-border-radius: 2px;
+   -webkit-border-radius: 2px;
    color: #555;
    cursor: pointer;
    line-height: 100%;
